# plp-file-viewer

./: Layout.hs  Logic.hs  Main.hs  Types.hs  plp.cabal  readme.md
exercises/: showcase.md
exercises/guia1/: ej1.hs  ej10.hs  ej11.hs  ej12.hs  ej13.hs  ej14.hs  ej15.hs  ej2.hs  ej3.hs  ej5.hs  ej6.hs  ej7.hs  ej8.hs
exercises/tp-1/: ej10.txt
exercises/tp-1/src/: Documento.hs  Main.hs  PPON.hs
static/: style.css
